Fixed bug where bottom of privacy policy and tos was hidden on mobile

--- a/src/pages/PrivacyPolicyTOS/PrivacyPolicyTOS.css
+++ b/src/pages/PrivacyPolicyTOS/PrivacyPolicyTOS.css
@@ -13,7 +13,7 @@
     border-radius: 30px;
     padding: 30px;
     width: 80vw;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 .text-container h2 {
